# zegrift-zegrift

./: .gitignore  pyproject.toml  run_pipeline_demo.py
docs/: README.md  SPOUSE_MP_TEST.md  data-model.md  implementation-plan.md  pipeline.md
src/db/: load.py  schema.sql
src/db/migrations/: schema_002_vouliwatch_parity.py  schema_003_declarant_role.py  schema_004_spouse_mp.py  schema_005_real_estate_full_fields.py
src/ingest/: download_pdfs.py  scrape_index.py  vouliwatch.py
src/link/: match.py  spouse_mp.py
src/parse/: font_cmap.py  parse_pdf.py  region_ocr.py
src/parse/templates/: decl_2024.py
tests/: test_spouse_mp.py
