[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zegrift"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11",
    "pypdf>=4.0",
    "fonttools>=4.50",
    "Pillow>=10.0",
    "pytesseract>=0.3.10",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rapidfuzz>=3.6",
    "tenacity>=8.2",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-snapshot>=0.9",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
